<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/btn_del"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/calculator_btn"
        android:text="@string/del"
        android:textSize="18sp"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_ac"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/calculator_btn"
        android:text="@string/ac"
        android:textSize="18sp"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_mr"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:backgroundTint="#263238"
                android:text="@string/mr"
                android:textSize="18sp"
                app:backgroundTint="#FFE500" />

            <Button
                android:id="@+id/btn_mc"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/mc"
                android:textSize="18sp"
                app:backgroundTint="#FFE500" />

            <Button
                android:id="@+id/btn_ms"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/ms"
                android:textSize="18sp"
                app:backgroundTint="#FFE500" />

            <Button
                android:id="@+id/btn_madd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/madd"
                android:textSize="18sp"
                app:backgroundTint="#FFE500" />

            <Button
                android:id="@+id/btn_msub"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/msub"
                android:textSize="18sp"
                app:backgroundTint="#FF9800" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/seven"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/eight"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/nine"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_sqrt"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/sqrt"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_inverse"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/inverse"
                android:textSize="18sp"
                app:backgroundTint="#FF9800" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/four"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/five"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/six"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/multiply"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/divide"
                android:textSize="18sp"
                app:backgroundTint="#FF9800" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/one"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/two"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/three"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/add"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/subtract"
                android:textSize="18sp"
                app:backgroundTint="#FF9800" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/zero"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/dot"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_reverse"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/reverse"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/percent"
                android:textSize="18sp"
                app:backgroundTint="#AEC8DC" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/calculator_btn"
                android:text="@string/equal"
                android:textSize="18sp"
                app:backgroundTint="#FF9800" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_screen"
        android:layout_width="411dp"
        android:layout_height="159dp"

        android:background="#3349C11C"
        android:gravity="right|center_vertical"
        android:paddingRight="10dp"
        android:text="0"
        android:textColor="#020202"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />
</androidx.constraintlayout.widget.ConstraintLayout>